shows house name on index for students

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 </form>
 <% for student in @students %>
 <p>Name: <%= student.pretty_name()  %></p>
-<p>House: <%= student.house_id() %></p>
+<p>House: <%= student.house.name %></p>
 <p>Age: <%= student.age() %></p>
 
 <form action="/students/<%= student.id  %>" method="get">
