--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<h1> Hogwarts Students</h1>
+<h1>Welcome</h1>
 <form action="/students/new" method="get">
 <input type="submit" value="Add a new student" />
 </form>
