--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Hogwarts Students</title>
-  <!-- <link rel="stylesheet" type = "text/css" href="/style.css" -->
+  <link rel="stylesheet" type = "text/css" href="/style.css"
 </head>
 <body>
 <h1>Hogwarts Students</h1>
